# flask-restful-api-course

./: .gitignore  meal_options.postman_collection.json
s01-create-project/: README.md
s01-create-project/meal_options/: Makefile  Pipfile  pyproject.toml
s01-create-project/meal_options/meal_options/: __init__.py  app.py  settings.py  views.py
s01-create-project/meal_options/tests/: test_meal_options.py
s02-add-resources/meal_options/: Makefile  Pipfile
s02-add-resources/meal_options/meal_options/: __init__.py  app.py  settings.py  views.py
s02-add-resources/meal_options/tests/: test_meal_options.py
s03-output-fields/meal_options/meal_options/: app.py  app_factory.py  views.py
s04-input-check/meal_options/: Pipfile
s04-input-check/meal_options/meal_options/: __init__.py  app.py  app_factory.py  model.py  views.py
s05-add-database/meal_options/: Pipfile  README.md
s05-add-database/meal_options/meal_options/: __init__.py  app.py  app_factory.py  default_settings.py  views.py
s06-add-login-auth/meal_options/: Pipfile
s06-add-login-auth/meal_options/meal_options/: app.py  app_factory.py  auth.py  views.py
s06-add-login-auth/meal_options/tests/: test_meal_options.py
s07-blueprint/meal_options/: Pipfile
s07-blueprint/meal_options/meal_options/: __init__.py  app_factory.py  model.py  views.py
s08-deploy/meal_options/: Caddyfile  Pipfile  gunicorn.conf  gunicorn.conf.py  start_gunicorn.sh
s10-login-auth-with-g/meal_options/: .gitignore
s11-login-auth-with-ctx/meal_options/: MANIFEST.in  Pipfile  setup.py
(+17 files in other folders)
