[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "meal_options"
version = "1.0.0"
requires-python = ">=3.7"
dependencies = [
    "Flask>=2.1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<8",
]

[tool.setuptools.package-data]
"*" = []

[tool.pytest.ini_options]
testpaths = ["tests"]
